apps/namespaces/media-server/sonarr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr
        ports:
        - name: http
          containerPort: 8989
          protocol: TCP
        volumeMounts:
        - name: sonarr-data
          mountPath: /config
        - name: nfs-media
          mountPath: /media
      volumes:
      - name: sonarr-data
        persistentVolumeClaim:
          claimName: sonarr-data-pvc
      - name: nfs-media
        persistentVolumeClaim:
          claimName: media-server-nfs-pvc
