apps/namespaces/media-server/sonarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media-server
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: sonarr
  type: ClusterIP
