apps/namespaces/media-server/sonarr/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media-server
spec:
  rules:
    - host: sonarr.home
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  number: 80
            path: /
            pathType: Prefix
